Some entity work, removed some stuff that isn't necessary