@@ -15,11 +15,18 @@ import net.minecraft.entity.ai.EntityAIMoveTowardsRestriction;
 import net.minecraft.entity.ai.EntityAINearestAttackableTarget;
 import net.minecraft.entity.ai.EntityAIWander;
 import net.minecraft.entity.ai.EntityAIWatchClosest;
+import net.minecraft.entity.monster.EntityBlaze;
 import net.minecraft.entity.player.EntityPlayer;
 import net.minecraft.init.Items;
+import net.minecraft.init.SoundEvents;
 import net.minecraft.item.Item;
+import net.minecraft.network.datasync.DataParameter;
+import net.minecraft.network.datasync.DataSerializers;
+import net.minecraft.network.datasync.EntityDataManager;
 import net.minecraft.util.DamageSource;
 import net.minecraft.util.EnumParticleTypes;
+import net.minecraft.util.math.BlockPos;
+import net.minecraft.util.math.MathHelper;
 import net.minecraft.world.World;
 import net.minecraftforge.fml.relauncher.Side;
 import net.minecraftforge.fml.relauncher.SideOnly;
@@ -30,6 +37,7 @@ public class EntityMagmaBlaze extends EntityModMob {
 	private float heightOffset = 0.5F;
 	private int heightOffsetUpdateTime;
 	private int attackTimer;
+    private static final DataParameter<Byte> ON_FIRE = EntityDataManager.<Byte>createKey(EntityBlaze.class, DataSerializers.BYTE);
 
 	public EntityMagmaBlaze(World w) {
 		super(w);
@@ -46,29 +54,29 @@ public class EntityMagmaBlaze extends EntityModMob {
 
 	@Override
 	protected void entityInit() {
-		super.entityInit();
-		this.dataWatcher.addObject(16, new Byte((byte)0));
-	}
+        super.entityInit();
+        this.dataManager.register(ON_FIRE, Byte.valueOf((byte)0));
+    }
 
-	@Override
-	@SideOnly(Side.CLIENT)
-	public int getBrightnessForRender(float p_70070_1_) {
-		return 15728880;
-	}
+    @SideOnly(Side.CLIENT)
+    @Override
+    public int getBrightnessForRender() {
+        return 15728880;
+    }
 
-	@Override
-	public float getBrightness(float p_70013_1_) {
-		return 1.0F;
-	}
+    @Override
+    public float getBrightness() {
+        return 1.0F;
+    }
 
 	@Override
 	public void onLivingUpdate() {
 		
-		if(this.worldObj.isDaytime() && !this.worldObj.isRemote) {
-            float var1 = getBrightness(1.0F);
+		if(this.world.isDaytime() && !this.world.isRemote) {
+            float var1 = getBrightness();
 		}
         
-        List<Entity> e = this.worldObj.getEntitiesWithinAABBExcludingEntity(this, this.getEntityBoundingBox());        
+        List<Entity> e = this.world.getEntitiesWithinAABBExcludingEntity(this, this.getEntityBoundingBox());        
         for(Entity entity : e) {
         	if(entity instanceof EntityPlayer && canEntityBeSeen(entity)) ((EntityPlayer)entity).setFire(5 + rand.nextInt(7));
         }        
@@ -78,16 +86,16 @@ public class EntityMagmaBlaze extends EntityModMob {
             this.motionY *= 0.6D;
         }
 
-        if (this.worldObj.isRemote)
+        if (this.world.isRemote)
         {
             if (this.rand.nextInt(24) == 0 && !this.isSilent())
             {
-                this.worldObj.playSound(this.posX + 0.5D, this.posY + 0.5D, this.posZ + 0.5D, "fire.fire", 1.0F + this.rand.nextFloat(), this.rand.nextFloat() * 0.7F + 0.3F, false);
+            	 this.world.playSound(this.posX + 0.5D, this.posY + 0.5D, this.posZ + 0.5D, SoundEvents.ENTITY_BLAZE_BURN, this.getSoundCategory(), 1.0F + this.rand.nextFloat(), this.rand.nextFloat() * 0.7F + 0.3F, false);
             }
 
             for (int i = 0; i < 2; ++i)
             {
-                this.worldObj.spawnParticle(EnumParticleTypes.SMOKE_LARGE, this.posX + (this.rand.nextDouble() - 0.5D) * this.width, this.posY + this.rand.nextDouble() * this.height, this.posZ + (this.rand.nextDouble() - 0.5D) * this.width, 0.0D, 0.0D, 0.0D, new int[0]);
+                this.world.spawnParticle(EnumParticleTypes.SMOKE_LARGE, this.posX + (this.rand.nextDouble() - 0.5D) * this.width, this.posY + this.rand.nextDouble() * this.height, this.posZ + (this.rand.nextDouble() - 0.5D) * this.width, 0.0D, 0.0D, 0.0D, new int[0]);
             }
         }
 
@@ -97,7 +105,7 @@ public class EntityMagmaBlaze extends EntityModMob {
 	@Override
 	protected void updateAITasks() {
 		if (this.isWet()) {
-            this.attackEntityFrom(DamageSource.drown, 1.0F);
+            this.attackEntityFrom(DamageSource.DROWN, 1.0F);
         }
 
         --this.heightOffsetUpdateTime;
@@ -130,21 +138,30 @@ public class EntityMagmaBlaze extends EntityModMob {
 		if(b) {
 			int j = this.rand.nextInt(2 + i);
 			for (int k = 0; k < j; ++k) {
-				this.dropItem(Items.blaze_rod, 1);
+				this.dropItem(Items.BLAZE_ROD, 1);
 			}
 		}
 	}
 
 	public boolean isFlying() {
-		return (this.dataWatcher.getWatchableObjectByte(16) & 1) != 0;
+        return (((Byte)this.dataManager.get(ON_FIRE)).byteValue() & 1) != 0;
 	}
 
-	public void setFlying(boolean b) {
-		byte b0 = this.dataWatcher.getWatchableObjectByte(16);
-		if(b) b0 = (byte)(b0 | 1);
-		else b0 &= -2;
-		this.dataWatcher.updateObject(16, Byte.valueOf(b0));
-	}
+    public void setOnFire(boolean onFire)
+    {
+        byte b0 = ((Byte)this.dataManager.get(ON_FIRE)).byteValue();
+
+        if (onFire)
+        {
+            b0 = (byte)(b0 | 1);
+        }
+        else
+        {
+            b0 = (byte)(b0 & -2);
+        }
+
+        this.dataManager.set(ON_FIRE, Byte.valueOf(b0));
+    }
 	
 	@Override
 	public double setAttackDamage(MobStats s) {
@@ -173,7 +190,7 @@ public class EntityMagmaBlaze extends EntityModMob {
 
 	@Override
 	public Item getItemDropped() {
-		return Items.blaze_rod;
+		return Items.BLAZE_ROD;
 	}
 	
     class AIFireballAttack extends EntityAIBase
@@ -204,7 +221,7 @@ public class EntityMagmaBlaze extends EntityModMob {
         @Override
 		public void resetTask()
         {
-            this.field_179469_a.setFlying(false);
+            this.field_179469_a.setOnFire(false);
         }
 
         @Override
@@ -212,7 +229,7 @@ public class EntityMagmaBlaze extends EntityModMob {
         {
             --this.field_179468_c;
             EntityLivingBase entitylivingbase = this.field_179469_a.getAttackTarget();
-            double d0 = this.field_179469_a.getDistanceSqToEntity(entitylivingbase);
+            double d0 = this.field_179469_a.getDistanceSq(entitylivingbase);
 
             if (d0 < 4.0D)
             {
@@ -237,7 +254,7 @@ public class EntityMagmaBlaze extends EntityModMob {
                     if (this.field_179467_b == 1)
                     {
                         this.field_179468_c = 60;
-                        this.field_179469_a.setFlying(true);
+                        this.field_179469_a.setOnFire(true);
                     }
                     else if (this.field_179467_b <= 4)
                     {
@@ -247,19 +264,19 @@ public class EntityMagmaBlaze extends EntityModMob {
                     {
                         this.field_179468_c = 100;
                         this.field_179467_b = 0;
-                        this.field_179469_a.setFlying(false);
+                        this.field_179469_a.setOnFire(false);
                     }
 
                     if (this.field_179467_b > 1)
                     {
-                        float f = MathHelper.sqrt_float(MathHelper.sqrt_double(d0)) * 0.5F;
-                        this.field_179469_a.worldObj.playAuxSFXAtEntity((EntityPlayer)null, 1009, new BlockPos((int)this.field_179469_a.posX, (int)this.field_179469_a.posY, (int)this.field_179469_a.posZ), 0);
+                        float f = MathHelper.sqrt(MathHelper.sqrt(d0)) * 0.5F;
+                        this.field_179469_a.world.playEvent((EntityPlayer)null, 1018, new BlockPos((int)this.field_179469_a.posX, (int)this.field_179469_a.posY, (int)this.field_179469_a.posZ), 0);
 
                         for (int i = 0; i < 1; ++i)
                         {
-                            EntityMagmaFireball entitysmallfireball = new EntityMagmaFireball(this.field_179469_a.worldObj, this.field_179469_a, d1 + this.field_179469_a.getRNG().nextGaussian() * f, d2, d3 + this.field_179469_a.getRNG().nextGaussian() * f);
+                            EntityMagmaFireball entitysmallfireball = new EntityMagmaFireball(this.field_179469_a.world, this.field_179469_a, d1 + this.field_179469_a.getRNG().nextGaussian() * f, d2, d3 + this.field_179469_a.getRNG().nextGaussian() * f);
                             entitysmallfireball.posY = this.field_179469_a.posY + this.field_179469_a.height / 2.0F + 0.5D;
-                            this.field_179469_a.worldObj.spawnEntityInWorld(entitysmallfireball);
+                            this.field_179469_a.world.spawnEntity(entitysmallfireball);
                         }
                     }
                 }
@@ -268,7 +285,7 @@ public class EntityMagmaBlaze extends EntityModMob {
             }
             else
             {
-                this.field_179469_a.getNavigator().clearPathEntity();
+                this.field_179469_a.getNavigator().clearPath();
                 this.field_179469_a.getMoveHelper().setMoveTo(entitylivingbase.posX, entitylivingbase.posY, entitylivingbase.posZ, 1.0D);
             }
 
